Resolves: tdf#96244 get the right Writer window view for Formula window

if you hit F1 and F2 together, then the help window is a writer window
too (in disguise) so asking for the "active view" on processing the F2
in the real writer will get the help window as the active view, which
doesn't match expectations.

Take the view from the bindings, where its correct from when the event
has been dispatched.

Investigating a bit further, the F2 formula window only works correctly
when its in an "active" window. So get the correct view from the dispatcher
but only accept that view if its the active one.

Change-Id: I2fd52ca6b68e887d34b07b70b830722f1d00b37a
(cherry picked from commit 77e7dc648ebb8b7d946111e2be4dfdbba72840b2)
Reviewed-on: https://gerrit.libreoffice.org/25446
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 97d0e7be1ad95adcd13fff507885047bdcd54d82)